refactor: transition from Serializable to String-based protocol and improve logging
- Remove Serializable implementation from all Model classes (User, Auction, Item, Bid).
- Refactor ClientSocket and ClientHandler to use String pipes with "|" and ";" delimiters.
- Improve ResponseHandler logic to support manual parsing of auction lists and user data.
- Update CreateAuctionController with data cleaning to prevent delimiter collisions.
- Enhance Server-side logging for better debugging (RECEIVE/RESPONSE logs).
- Fix Deprecated Locale constructors and improve NumberFormat for currency.
- Sync Command and ResponseType handling between Client and Server.
- Add Role-based parsing in Login success response.